Removed the width calc() and z-index. Removed the calc() for width because this is no longer single column. Removed z-index as it is no longer one single column with layering. Removed the width 100% so it will default to auto on the desktop so the margin: 0 15px will properly affect the schedule and results views.

--- a/sass/partials/_athletics.scss
+++ b/sass/partials/_athletics.scss
@@ -323,8 +323,6 @@ body.section-sports {
     margin-left: 264px;
     position: absolute;
     top: 452px;
-    width: calc(100% - 294px);
-    z-index: 10;
 
     ul {
       display: inline-block;
@@ -371,7 +369,6 @@ body.section-sports {
         border: 2px solid #BF9F41;
         border-radius: 15px;
         margin: 0 15px;
-        width: 100%;
 
         .view-content {
           padding: 15px;
